manifests/ingress-24.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-476f"
    labels:
        app: "diaggarw-476f"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw03b3-diaggarw-476f.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-476f"
                servicePort: 8080
